<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- ACTIVITY NAMES -->
    <string name="app_name">Bowling Companion</string>
    <string name="title_activity_league_event">Leagues &amp; Events</string>
    <string name="title_activity_series">Series</string>
    <string name="title_activity_game">Game Details</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_stats_game">Game Stats</string>
    <string name="title_activity_stats_league">League Stats</string>
    <string name="title_activity_stats_bowler">Bowler Stats</string>
    <string name="title_activity_stats_series">Series Stats</string>
    <string name="title_activity_settings">Settings</string>

    <!-- ACTION BUTTON LABELS -->
    <string name="action_quick_series">Quick Series</string>
    <string name="action_settings">Settings</string>
    <string name="action_stats">Stats</string>
    <string name="action_what_if">What If?</string>
    <string name="action_reset_game">Reset Game</string>
    <string name="action_series_stats">Series Stats</string>
    <string name="action_event_stats">Event Stats</string>
    <string name="action_set_score">Set Manual Score</string>
    <string name="action_clear_score">Clear Manual Score</string>
    <string name="action_edit_date">Change Series Date</string>
    <string name="action_share">Share</string>

    <!-- TEXT -->
    <string name="text_new_bowler_instructions">Use the \'+\' to add a new bowler.</string>
    <string name="text_delete_bowler_instructions">Hold down a bowler\'s name to delete them.</string>
    <string name="text_new_league_instructions">Use the \'+\' to add a new league.</string>
    <string name="text_delete_league_instructions">Hold down a league\'s name to delete it.</string>
    <string name="text_new_event_instructions">Use the \'+\' to add a new event.</string>
    <string name="text_delete_event_instructions">Hold down an event\'s name to delete it.</string>
    <string name="text_new_series_instructions">Use the \'+\' to add a new series.</string>
    <string name="text_delete_series_instructions">Hold down a series\' name to delete it.</string>
    <string name="text_strike">Strike</string>
    <string name="text_spare">Spare</string>
    <string name="text_fifteen">Fifteen</string>
    <string name="text_next_ball">Next Ball</string>
    <string name="text_prev_ball">Prev Ball</string>
    <string name="text_setting_foul">Add foul</string>
    <string name="text_setting_foul_remove">Remove foul</string>
    <string name="text_setting_reset_frame">Reset frame</string>
    <string name="text_setting_lock">Lock game</string>
    <string name="text_setting_unlock">Unlock game</string>
    <string name="text_cancel_edit">Cancel...</string>
    <string name="text_changing_date">Select series to edit</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- PREFERENCES -->
    <string name="pref_full_version_title">Full Version</string>
    <string name="pref_view_full_title">View in Play Store</string>
    <string name="pref_view_full_summary">See additional features of full version</string>
    <string name="pref_quick_series_title">Quick Series</string>
    <string name="pref_enable_quick_title">Enable quick series</string>
    <string name="pref_quick_bowler_dialog">Select a Bowler</string>
    <string name="pref_quick_league_dialog">Select a League</string>
    <string name="pref_enable_quick_summary_recent">A recent bowler/league will be used to create a quick series</string>
    <string name="pref_enable_quick_summary_quick">A custom bowler/league will be used to create a quick series</string>
    <string name="pref_quick_bowler_title">Bowler</string>
    <string name="pref_quick_bowler_summary">Quick series will be created for this bowler</string>
    <string name="pref_quick_league_title">League</string>
    <string name="pref_quick_league_summary">Quick series will be created for this league</string>
    <string name="pref_stats_title">Stats</string>
    <string name="pref_include_events_title">Include events in stats</string>
    <string name="pref_include_events_summary">Events will be included in stats</string>
    <string name="pref_include_events_summary_not">Events will not be included in stats</string>
    <string name="pref_include_open_title">Include open games in stats</string>
    <string name="pref_include_open_summary">Open games will be included in stats</string>
    <string name="pref_include_open_summary_not">Open games will not be included in stats</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_colors_title">Theme colors</string>
    <string name="pref_theme_colors_dialog">Select a Theme</string>
    <string name="pref_theme_colors_default">Green</string>
    <string name="pref_theme_colors_default_summary">Current theme is Green</string>
    <string name="pref_theme_light_title">Light theme variation</string>
    <string name="pref_theme_light_summary">Theme is a lighter variation</string>
    <string name="pref_theme_dark_summary">Theme is a darker variation</string>
    <string name="pref_other_title">Other</string>
    <string name="pref_developer_website_title">Visit Developer Website</string>
    <string name="pref_rate_title">Rate App</string>
    <string name="pref_report_bug_title">Report a Bug</string>
    <string name="pref_comment_suggestion_title">Submit a Comment/Suggestion</string>

    <!--
    Removed disabling pin images - may add back later
    <string name="pref_pins_title">Pins</string>
    <string name="pref_enable_pins_title">Enable pin images</string>
    <string name="pref_enable_pins_summary_images">Images of pins will be displayed</string>
    <string name="pref_enable_pins_summary_buttons">Buttons will be displayed</string>-->

    <!-- ADVERTISEMENTS -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
