<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_full_version_title"
        android:key="pref_full_version_settings">

        <Preference
            android:title="@string/pref_view_full_title"
            android:key="pref_purchase_full"
            android:summary="@string/pref_view_full_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=ca.josephroque.bowlingcompaniondeluxe" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_quick_series_title"
        android:key="pref_quick_series_settings">

        <SwitchPreference
            android:key="pref_enable_quick_series"
            android:title="@string/pref_enable_quick_title"
            android:summary="@string/pref_enable_quick_summary_recent"
            android:defaultValue="false" />
        <ListPreference
            android:key="pref_quick_bowler"
            android:title="@string/pref_quick_bowler_title"
            android:summary="@string/pref_quick_bowler_summary"
            android:dialogTitle="@string/pref_quick_bowler_dialog"/>
        <ListPreference
            android:key="pref_quick_league"
            android:title="@string/pref_quick_league_title"
            android:summary="@string/pref_quick_league_summary"
            android:dialogTitle="@string/pref_quick_league_dialog"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_stats_title"
        android:key="pref_stats_settings">

        <SwitchPreference
            android:title="@string/pref_include_events_title"
            android:summary="@string/pref_include_events_summary"
            android:key="pref_include_events"
            android:defaultValue="true" />
        <SwitchPreference
            android:title="@string/pref_include_open_title"
            android:summary="@string/pref_include_open_summary"
            android:key="pref_include_open"
            android:defaultValue="true" />
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/pref_theme_title"
        android:key="pref_theme_settings" >

        <ListPreference
            android:key="pref_theme_colors"
            android:title="@string/pref_theme_colors_title"
            android:dialogTitle="@string/pref_theme_colors_dialog"
            android:summary="@string/pref_theme_colors_default_summary"
            android:entries="@array/pref_theme_color_names"
            android:entryValues="@array/pref_theme_color_names"
            android:defaultValue="@string/pref_theme_colors_default" />
        <SwitchPreference
            android:key="pref_theme_light"
            android:title="@string/pref_theme_light_title"
            android:summary="@string/pref_theme_light_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <!--
    Removed disabling pin images - may add back later
    <PreferenceCategory
        android:title="@string/pref_pins_title"
        android:key="pref_pins_settings">

        <SwitchPreference
            android:key="pref_enable_pins"
            android:title="@string/pref_enable_pins_title"
            android:summary="@string/pref_enable_pins_summary_images"
            android:defaultValue="true" />
    </PreferenceCategory>-->

    <PreferenceCategory
        android:title="@string/pref_other_title"
        android:key="pref_other_settings" >

        <Preference
            android:key="pref_developer_website"
            android:title="@string/pref_developer_website_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://josephroque.ca" />
        </Preference>

        <Preference
            android:key="pref_rate"
            android:title="@string/pref_rate_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=ca.josephroque.bowlingcompanion" />
        </Preference>

        <Preference
            android:key="pref_report_bug"
            android:title="@string/pref_report_bug_title" />

        <Preference
            android:key="pref_comment_suggestion"
            android:title="@string/pref_comment_suggestion_title" />
    </PreferenceCategory>

</PreferenceScreen>