<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_enable_quick"
        android:summary="@string/pref_enable_quick_summaryOff"
        android:title="@string/pref_enable_quick_title" />

    <ListPreference
        android:dependency="pref_enable_quick"
        android:dialogTitle="@string/pref_quick_bowler_dialog"
        android:key="pref_quick_bowler"
        android:summary="@string/pref_quick_bowler_summary"
        android:title="@string/pref_quick_bowler_title" />

    <ListPreference
        android:dependency="pref_enable_quick"
        android:dialogTitle="@string/pref_quick_league_dialog"
        android:key="pref_quick_league"
        android:summary="@string/pref_quick_league_summary"
        android:title="@string/pref_quick_league_title" />

</PreferenceScreen>