<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="ca.josephroque.bowlingcompanion.GameActivity">
    <item android:id="@+id/action_stats"
          android:title="@string/action_stats"
          android:orderInCategory="1"
          android:icon="@drawable/ic_action_stats"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/action_what_if"
          android:title="@string/action_what_if"
          android:orderInCategory="2"
          app:showAsAction="never" />
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
