<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/game_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.josephroque.bowlingcompanion.GameActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:background="@android:color/black">

        <RelativeLayout
            android:id="@+id/relativeLayout_game_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondary_green_medium_dark">

            <ImageView
                android:id="@+id/imageView_prev_ball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_action_previous_item"/>

            <TextView
                android:id="@+id/textView_prev_ball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imageView_prev_ball"
                android:layout_toEndOf="@id/imageView_prev_ball"
                android:layout_alignBottom="@id/imageView_prev_ball"
                android:layout_alignTop="@id/imageView_prev_ball"
                android:text="@string/text_prev_ball"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"/>

            <ImageView
                android:id="@+id/imageView_clear_pins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_action_strike"/>

            <ImageView
                android:id="@+id/imageView_reset_frame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/imageView_clear_pins"
                android:layout_toStartOf="@id/imageView_clear_pins"
                android:src="@drawable/ic_action_refresh"/>

            <ImageView
                android:id="@+id/imageView_foul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imageView_clear_pins"
                android:layout_toEndOf="@id/imageView_clear_pins"
                android:src="@drawable/ic_action_foul"/>

            <ImageView
                android:id="@+id/imageView_next_ball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_action_next_item"/>

            <TextView
                android:id="@+id/textView_next_ball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/imageView_next_ball"
                android:layout_toStartOf="@id/imageView_next_ball"
                android:layout_alignBottom="@id/imageView_next_ball"
                android:layout_alignTop="@id/imageView_next_ball"
                android:text="@string/text_next_ball"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <HorizontalScrollView
                android:id="@+id/hsv_frames"
                android:layout_width="match_parent"
                android:layout_height="152dp"
                android:layout_alignParentTop="true"/>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/banner_ad_unit_id" />

            <ImageView
                android:id="@+id/imageView_alley"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/adView_game"
                android:background="@drawable/alley_background"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/hsv_frames"
                android:layout_above="@id/adView_game">

                <ImageButton
                    android:id="@+id/button_pin_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/pin"
                    android:background="@drawable/background_pin_button"/>
                <ImageButton
                    android:id="@+id/button_pin_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/pin"
                    android:background="@drawable/background_pin_button"/>
                <ImageButton
                    android:id="@+id/button_pin_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/pin"
                    android:background="@drawable/background_pin_button"/>
                <ImageButton
                    android:id="@+id/button_pin_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/pin"
                    android:background="@drawable/background_pin_button"/>
                <ImageButton
                    android:id="@+id/button_pin_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/pin"
                    android:background="@drawable/background_pin_button"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/left_drawer_games"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="1dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>